2025-10-04T00:46:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18237114262 # 786
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-04
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 940 1419 / 955 1434
* notice: next accum: outdated-unq outdated-all / unq all: 940 1419 / 956 1435
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-20 2025-10-03]

2025-10-03T00:49:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18209601673 # 785
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-03
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 937 1416 / 954 1433
* notice: next accum: outdated-unq outdated-all / unq all: 940 1419 / 955 1434
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-18 2025-09-19] / [2025-10-02]

2025-10-02T00:49:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18179918557 # 784
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-02
* notice: last 14d: unq all: 5 16
* notice: prev accum: outdated-unq outdated-all / unq all: 936 1415 / 953 1432
* notice: next accum: outdated-unq outdated-all / unq all: 937 1416 / 954 1433
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-17] / [2025-09-18 2025-10-01]

2025-10-01T00:56:58Z: