@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-10-04T00:46:12Z",
-  "count_outdated" : 1419,
-  "uniques_outdated" : 940,
+  "timestamp" : "2025-10-05T00:55:20Z",
+  "count_outdated" : 1421,
+  "uniques_outdated" : 942,
   "count" : 1435,
   "uniques" : 956,
   "clones" : [
     {
-      "timestamp": "2025-09-20T00:00:00Z",
+      "timestamp": "2025-09-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2025-09-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
     },
     {
       "timestamp": "2025-09-22T00:00:00Z",
