@@ -1,16 +1,11 @@
 {
-  "count": 15,
-  "uniques": 4,
+  "count": 13,
+  "uniques": 3,
   "clones": [
     {
-      "timestamp": "2025-09-20T00:00:00Z",
+      "timestamp": "2025-09-21T00:00:00Z",
       "count": 1,
       "uniques": 1
-    },
-    {
-      "timestamp": "2025-09-21T00:00:00Z",
-      "count": 2,
-      "uniques": 2
     },
     {
       "timestamp": "2025-09-22T00:00:00Z",
