@@ -1,3 +1,12 @@
+2025-10-05T00:55:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18251747810 # 787
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-05
+* notice: last 14d: unq all: 3 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 940 1419 / 956 1435
+* notice: next accum: outdated-unq outdated-all / unq all: 942 1421 / 956 1435
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
+* notice: removed / changed dates: [2025-09-20] / [2025-09-21]
+
 2025-10-04T00:46:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18237114262 # 786
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-04
